tests/error_corpus/validation_errors/not_implemented/E600_tier_validation_error.cha
@UTF8
@Begin
@Languages:	eng
@Participants:	CHI Target_Child
@ID:	eng|corpus|CHI|||||Target_Child|||
@Comment:	ERROR: Generic tier validation failure
*CHI:	I want cookie .
%mor:	invalid|mor|format
@End
