tests/error_corpus/parse_errors/E101_invalid_line_format.cha
@Begin
@Languages:	eng
InvalidLine
@Comment:	ERROR: Line format invalid
@End
